istio/ambient-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    istio.io/dataplane-mode: ambient
